--- a/flexBox.css
+++ b/flexBox.css
@@ -11,28 +11,40 @@
 h2{
     font-family: fantasy;
     font-weight: 300;
+    -moz-box-shadow:6px 8px 5px #333;
+    -ms-box-shadow:6px 8px 5px #333;
+    -webkit-box-shadow:6px 8px 5px #333;
+    -o-box-shadow:6px 8px 5px #333;
+    box-shadow: 6px 8px 5px #333;
     border-bottom: 4px solid orange;
     border-right: 2px solid orange;
     border-left: 2px solid orange;
+    border-top: 2px solid orange;
+    border-radius: 14px 88px;
     width: 200px;
     text-align: center;
 }
 
 img{
-    width: 350px;
-    height: 250px;
+    width: 310px;
+    height: 200px;
     margin: 8px;
-    position: relative;
-    overflow: hidden;
-  
+    transition: all 0.5s;
+    cursor: pointer;
+    box-shadow: 6px 8px 8px #333;
+    border-radius: 14px 38px;
 }
+
+img:hover{
+    transform: scale(1.1);
+}
+
+
 /* Shiny effect */
-img::before{
+/* img::before{
     content: '';
     position: absolute;
-    /* background-color: rgba(255, 255, 255, 0.8); */
-
-    background-color: black;
+    background-color: rgba(255, 255, 255, 0.8);
     height: 200px;
     width: 100px;
     border-radius: 50%;
@@ -50,4 +62,4 @@ img:hover::before{
     }50%{
         left: 100%;
     }
-}
+} */
